Set CI environment variable in code-quality.yml
Added CI environment variable to code quality workflow.

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -16,6 +16,9 @@ jobs:
   code-quality:
     runs-on: windows-latest
 
+    env:
+      CI: true  # Enable CI mode = ignore MAUI workloads
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
