--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,10 +3,10 @@
     <!-- Disable MAUI so workloads (iOS/MacCatalyst) are not required -->
     <UseMaui>false</UseMaui>
 
-    <!-- Force single framework -->
+    <!-- Override ALL TargetFrameworks -->
     <TargetFrameworks>net8.0</TargetFrameworks>
 
-    <!-- Avoid MAUI item injection -->
+    <!-- Prevent MAUI from re-adding Windows, Android, etc. -->
     <EnableDefaultCompileItems>true</EnableDefaultCompileItems>
   </PropertyGroup>
 </Project>
