--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -2,19 +2,16 @@ name: Code Quality
 
 on:
   push:
-    branches:
-      - develop
-      - 'feature/**'
-      - 'hotfix/**'
+    branches: [develop, 'feature/**', 'hotfix/**']
   pull_request:
-    branches:
-      - develop
-      - staging
-      - main
+    branches: [develop, staging, main]
 
 jobs:
   code-quality:
     runs-on: windows-latest
+
+    env:
+      CI: true   # MSBuild will now read this during restore
 
     steps:
       - name: Checkout code
@@ -25,12 +22,8 @@ jobs:
         with:
           dotnet-version: 8.0.x
 
-      - name: Export CI flag for MSBuild
-        shell: cmd
-        run: echo CI=true >> %GITHUB_ENV%
-
       - name: Restore
         run: dotnet restore Typefout.sln
 
-      - name: Run naming/style/code-convention checks
+      - name: Run code format checks
         run: dotnet format --verify-no-changes --severity error
